src/test/ui/panic-handler/panic-handler-bad-signature-3.rs
// compile-flags:-C panic=abort

#![no_std]
#![no_main]

use core::panic::PanicInfo;

#[panic_handler]
fn panic() -> ! { //~ ERROR function should have one argument
    loop {}
}
